--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -1,6 +1,44 @@
 .tittle {
-    color: rgb(78, 0, 73);
+    color: rgb(39, 179, 214);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 40px;
     text-align: center;
+}
+
+.producto {
+ margin-bottom: 10%;
+}
+.contador {
+    margin-top: 10%;
+    margin-left: 46%;
+    position: relative;
+    width: 100px;
+    .count__input{
+        border-radius: 5%;
+        width: 100%;
+        height: 40px;
+        outline: none;
+        text-align: center;
+        padding: 0%;
+        background-color: transparent;
+    }
+    .count__button{
+        background-color: transparent;
+        border: 0;
+        font-size: 22px;
+        color: blue;
+        position: absolute;
+        top: 0;
+        z-index: 2;
+        outline: none;
+        
+    }
+    .count__button--add {
+        right: -1px;
+        top: 60%;
+    }
+    .count__button--dec {
+        left: 0;
+        top: 58%;
+    }
 }
