--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -46,3 +46,13 @@
         top: 58%;
     }
 }
+
+
+.products {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 10%;
+  }
+  
